Création User fonctionnel

--- a/src/Becool/Bundle/MainBundle/Resources/views/User/new.html.twig
+++ b/src/Becool/Bundle/MainBundle/Resources/views/User/new.html.twig
@@ -1,14 +1,14 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>User creation</h1>
+    <h1>Création d'un nouvel utilisateur</h1>
 
     {{ form(form) }}
 
         <ul class="record_actions">
     <li>
         <a href="{{ path('admin_user') }}">
-            Back to the list
+            Annuler et retourner à la liste
         </a>
     </li>
 </ul>
