--- a/src/Becool/Bundle/MainBundle/Resources/views/User/edit.html.twig
+++ b/src/Becool/Bundle/MainBundle/Resources/views/User/edit.html.twig
@@ -1,14 +1,14 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>User edit</h1>
+    <h1>Modification de l'utilisateur {{ entity.prenom ~ entity.nom }}</h1>
 
     {{ form(edit_form) }}
 
         <ul class="record_actions">
     <li>
         <a href="{{ path('admin_user') }}">
-            Back to the list
+            Annuler et retourner à la lsite
         </a>
     </li>
     <li>{{ form(delete_form) }}</li>
