--- a/src/Becool/Bundle/MainBundle/Resources/views/User/index.html.twig
+++ b/src/Becool/Bundle/MainBundle/Resources/views/User/index.html.twig
@@ -1,17 +1,22 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>User list</h1>
+    <h1>Liste des utilisateurs</h1>
 
     <table class="records_list">
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Username</th>
-                <th>Salt</th>
-                <th>Password</th>
+                <th>Nom</th>
+                <th>Prenom</th>
                 <th>Email</th>
-                <th>Isactive</th>
+                <th>Mot de passe</th>
+                <th>Date de naissance</th>
+                <th>Sexe</th>
+                <th>Ville</th>
+                <th>Niveau</th>
+                <th>Points totaux</th>
+                <th>Points Temporaires</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -19,18 +24,23 @@
         {% for entity in entities %}
             <tr>
                 <td><a href="{{ path('admin_user_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                <td>{{ entity.username }}</td>
-                <td>{{ entity.salt }}</td>
-                <td>{{ entity.password }}</td>
+                <td>{{ entity.nom }}</td>
+                <td>{{ entity.prenom }}</td>
                 <td>{{ entity.email }}</td>
-                <td>{{ entity.isActive }}</td>
+                <td>{{ entity.password }}</td>
+                <td>{% if entity.birth %}{{ entity.birth|date('d-m-Y') }}{% endif %}</td>
+                <td>{{ entity.sexe }}</td>
+                <td>{{ entity.ville }}</td>
+                <td>{{ entity.level }}</td>
+                <td>{{ entity.totalPoint }}</td>
+                <td>{{ entity.tempPoint }}</td>
                 <td>
                 <ul>
                     <li>
-                        <a href="{{ path('admin_user_show', { 'id': entity.id }) }}">show</a>
+                        <a href="{{ path('admin_user_show', { 'id': entity.id }) }}">Détails</a>
                     </li>
                     <li>
-                        <a href="{{ path('admin_user_edit', { 'id': entity.id }) }}">edit</a>
+                        <a href="{{ path('admin_user_edit', { 'id': entity.id }) }}">Modifier</a>
                     </li>
                 </ul>
                 </td>
@@ -42,7 +52,7 @@
         <ul>
         <li>
             <a href="{{ path('admin_user_new') }}">
-                Create a new entry
+                Créer un nouvel utilisateur
             </a>
         </li>
     </ul>
