Ajout en cours de l'entité Commentaire

--- a/src/Becool/Bundle/ProfilBundle/Resources/views/Profil/index.html.twig
+++ b/src/Becool/Bundle/ProfilBundle/Resources/views/Profil/index.html.twig
@@ -3,5 +3,11 @@
 {% block body %}
   
     <h1>Bonjour {{ user.prenom ~ ' ' ~ user.nom | capitalize }}</h1>
+    
+    {% if is_granted('ROLE_ADMIN') %}
+    <p>
+	<a href="{{ path('admin_user') }}">Aller à la zone admin</a>
+    </p>
+    {% endif %}
 
 {% endblock %}
